testsuite/tests/rep-poly/RepPolyPatBind.stderr

RepPolyPatBind.hs:18:5: error:
    • • The binder ‘y’ does not have a fixed runtime representation.
        Its type is:
          a :: TYPE rep
      • The binder ‘x’ does not have a fixed runtime representation.
        Its type is:
          a :: TYPE rep
    • In the expression:
        let
          x, y :: a
          (# x, y #) = undefined
        in x
      In an equation for ‘foo’:
          foo _
            = let
                x, y :: a
                (# x, y #) = undefined
              in x
